--- a/project/templates/project/timeentry_detail.html
+++ b/project/templates/project/timeentry_detail.html
@@ -1,6 +1,6 @@
 {% extends 'home/home_page.html' %}
-{% block users %}
-    <h2><a href="{% url 'user-list' %}" class="text-decoration-none text-dark">Users</a> &rarr; {{ user }} <a class="btn btn-primary" href="{% url 'user-update' user.pk %}">Edit</a></h2>
+{% block content %}
+    <h2><a href="{% url 'timeentry-list' %}" class="text-decoration-none text-dark">Users</a> &rarr; {{ timeentry }} <a class="btn btn-primary" href="{% url 'timeentry-update' timeentry.pk %}">Edit</a></h2>
     <ul>
       {% for field in fields %}
       <li>{{ field }}</li>
