--- a/project/templates/project/timeentry_list.html
+++ b/project/templates/project/timeentry_list.html
@@ -1,10 +1,9 @@
 {% extends 'home/home_page.html' %}
-{% block users %}
+{% block content %}
 
-    <h2>Users</h2>
     <ul>
-        {% for user in object_list %}
-            <li><a href="{% url 'user-detail' user.pk %}">{{ user }}</a></li>
+        {% for timeentry in object_list %}
+            <li><a href="{% url 'timeentry-detail' timeentry.pk %}">{{ timeentry }}</a></li>
         {% endfor %}
     </ul>
 
