--- a/project/templates/project/timeentry_form.html
+++ b/project/templates/project/timeentry_form.html
@@ -1,7 +1,7 @@
 {% extends 'home/home_page.html' %}
-{% block users %}
+{% block content %}
     <form method="post" class="form">{% csrf_token %}
-    <h2><a href="{% url 'user-list' %}" class="text-decoration-none text-dark">Users</a> &rarr; {{ user }} <input class="btn btn-primary" type="submit" value="Save"></h2>
+    <h2><a href="{% url 'timeentry-list' %}" class="text-decoration-none text-dark">Users</a> &rarr; {{ timeentry }} <input class="btn btn-primary" type="submit" value="Save"></h2>
     {{ form }}
     </form>
 {% endblock %}
