--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -14,6 +14,7 @@
     <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
       <a type="button" class="btn btn-primary" href="{% url 'admin:index' %}" role="button">Django Admin</a>
       <a type="button" class="btn btn-primary" href="/api" target="_blank" role="button">Web Browseable API</a>
+      <a type="button" class="btn btn-primary" href="/times" role="button">Time Entries</a>
     </div>
     <div class="d-flex justify-content-center">
       <img src="{% static 'vendors/images/webpack.png' %}" class="img-fluid"/>
