--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -16,6 +16,7 @@
       <a type="button" class="btn btn-primary" href="/api" target="_blank" role="button">Web Browseable API</a>
       <a type="button" class="btn btn-primary" href="/times" role="button">Time Entries</a>
     </div>
+    {% block times %}{% endblock %}
     <div class="d-flex justify-content-center">
       <img src="{% static 'vendors/images/webpack.png' %}" class="img-fluid"/>
     </div>
