--- a/project/templates/project/timeentry_detail.html
+++ b/project/templates/project/timeentry_detail.html
@@ -1,9 +1,8 @@
 {% extends 'home/home_page.html' %}
-{% block content %}
+{% block times %}
     <h2><a href="{% url 'timeentry-list' %}" class="text-decoration-none text-dark">Time Entries</a> &rarr; {{ timeentry }} <a class="btn btn-primary" href="{% url 'timeentry-update' timeentry.pk %}">Edit</a></h2>
     <ul>
-      {% for field in fields %}
-      <li>{{ field }}</li>
-      {% endfor %}
+      <li>{{ timeentry.hours }}</li>
+      <li>{{ timeentry.date }}</li>
     </ul>
 {% endblock %}
