--- a/project/templates/project/timeentry_list.html
+++ b/project/templates/project/timeentry_list.html
@@ -1,5 +1,5 @@
 {% extends 'home/home_page.html' %}
-{% block times %}
+{% block time_entries %}
 
     <ul>
         {% for timeentry in object_list %}
