--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -14,9 +14,9 @@
     <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
       <a type="button" class="btn btn-primary" href="{% url 'admin:index' %}" role="button">Django Admin</a>
       <a type="button" class="btn btn-primary" href="/api" target="_blank" role="button">Web Browseable API</a>
-      <a type="button" class="btn btn-primary" href="/times" role="button">Time Entries</a>
+      <a type="button" class="btn btn-primary" href="{% url 'timeentry-list' %}" role="button">Time Entries</a>
     </div>
-    {% block times %}{% endblock %}
+    {% block time_entries %}{% endblock %}
     <div class="d-flex justify-content-center">
       <img src="{% static 'vendors/images/webpack.png' %}" class="img-fluid"/>
     </div>
