--- a/project/templates/project/timeentry_form.html
+++ b/project/templates/project/timeentry_form.html
@@ -1,5 +1,5 @@
 {% extends 'home/home_page.html' %}
-{% block times %}
+{% block time_entries %}
     <form method="post" class="form">{% csrf_token %}
     <h2><a href="{% url 'timeentry-list' %}" class="text-decoration-none text-dark">Time Entries</a> &rarr; {{ timeentry }} <input class="btn btn-primary" type="submit" value="Save"></h2>
     {{ form }}
