--- a/project/templates/manage_timeentries.html
+++ b/project/templates/manage_timeentries.html
@@ -3,4 +3,5 @@
 <form method="post">
   {{ formset }}
 </form>
+<a class="text-dark text-decoration-none display-1" href="{% url 'timeentry-manage' %}?extra={{ extra }}">+</a>
 {% endblock %}
