--- a/project/templates/manage_timeentries.html
+++ b/project/templates/manage_timeentries.html
@@ -3,5 +3,6 @@
 <form method="post">
   {{ formset }}
 </form>
-<a class="text-dark text-decoration-none display-1" href="{% url 'timeentry-manage' %}?extra={{ extra }}">+</a>
+<a class="text-dark text-decoration-none display-1" href="{% url 'timeentry-manage' %}?extra={{ extra }}&plus=1">{{ plus }} +</a>
+<a class="text-dark text-decoration-none display-1" href="{% url 'timeentry-manage' %}?extra={{ extra }}&minus=1">{{ minus }}-</a>
 {% endblock %}
