--- a/project/templates/manage_timeentries.html
+++ b/project/templates/manage_timeentries.html
@@ -4,9 +4,10 @@
 <a class="btn btn-primary" href="{% url 'timeentry-manage' %}?extra={{ extra }}&minus=1">-</a>
 <a class="btn btn-primary" href="{% url 'timeentry-manage' %}?extra={{ extra }}&plus=1">+</a>
 </div>
-<form method="post">
+<form method="post">{% csrf_token %}
 <table class="table">
   {{ formset }}
 </table>
+<input class="btn btn-lg btn-primary" type="submit" value="Submit">
 </form>
 {% endblock %}
