--- a/project/templates/manage_timeentries.html
+++ b/project/templates/manage_timeentries.html
@@ -5,9 +5,9 @@
 <a class="btn btn-primary" href="{% url 'timeentry-manage' %}?extra={{ extra }}&plus=1">+</a>
 </div>
 <form method="post">{% csrf_token %}
-<table class="table">
-  {{ formset }}
-</table>
+<ul> 
+  {{ formset.as_ul }}
+</ul>
 <input class="btn btn-lg btn-primary" type="submit" value="Submit">
 </form>
 {% endblock %}
