--- a/project/templates/project/document_detail.html
+++ b/project/templates/project/document_detail.html
@@ -2,6 +2,6 @@
 {% block documents %}
     <h2><a href="{% url 'document-list' %}" class="text-decoration-none text-dark">Documents</a> &rarr; {{ document }} <a class="btn btn-primary" href="{% url 'document-update' document.pk %}">Edit</a></h2>
     <ul>
-      <li><a href="{% url 'timeentry-detail' document.time_entry.pk %}">{{ document.time_entry }}</a></li>
+      <li>{{ document }}</li>
     </ul>
 {% endblock %}
