--- a/project/templates/project/timeentry_detail.html
+++ b/project/templates/project/timeentry_detail.html
@@ -4,5 +4,6 @@
     <ul>
       <li>{{ timeentry.hours }}</li>
       <li>{{ timeentry.date }}</li>
+      <li>{{ timeentry.document }}</li>
     </ul>
 {% endblock %}
