--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -16,7 +16,7 @@
       <a type="button" class="btn btn-primary" href="/api" target="_blank" role="button">Web Browseable API</a>
       <a type="button" class="btn btn-primary" href="{% url 'timeentry-list' %}" role="button">Time Entries List</a>
       <a type="button" class="btn btn-primary" href="{% url 'timeentry-manage' %}" role="button">Time Entries Manage</a>
-      <a type="button" class="btn btn-primary" href="{% url 'timesheet-list' %}" role="button">Document List</a>
+      <a type="button" class="btn btn-primary" href="{% url 'timesheet-list' %}" role="button">Time Sheet List</a>
     </div>
     {% block time_entries %}{% endblock %}
     {% block timesheets %}{% endblock %}
