--- a/project/templates/project/timesheet_detail.html
+++ b/project/templates/project/timesheet_detail.html
@@ -2,6 +2,8 @@
 {% block timesheets %}
     <h2><a href="{% url 'timesheet-list' %}" class="text-decoration-none text-dark">Time Sheets</a> &rarr; {{ timesheet }} <a class="btn btn-primary" href="{% url 'timesheet-manage' timesheet.pk %}">Edit</a></h2>
     <ul>
-      <li>{{ timesheet.timeentry_set.all }}</li>
+      {% for timeentry in timesheet.timeentry_set.all %}
+      <li><a href="{% url 'timeentry-detail' timeentry.pk %}">{{ timeentry }}</a></li>
+      {% endfor %}
     </ul>
 {% endblock %}
