--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -12,7 +12,7 @@
     <p>This is a template for a simple marketing or informational website. It includes a large callout called a
       jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
     <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
-      <a type="button" class="btn btn-primary" href="{% url 'admin:index' %}" role="button">Django Admin</a>
+      <a type="button" class="btn btn-primary" href="{% url 'admin:index' %}" target="_blank" role="button">Django Admin</a>
       <a type="button" class="btn btn-primary" href="/api" target="_blank" role="button">Web Browseable API</a>
       <a type="button" class="btn btn-primary" href="{% url 'timeentry-list' %}" role="button">Time Entries List</a>
       <a type="button" class="btn btn-primary" href="{% url 'timeentry-manage' %}" role="button">Time Entries Manage</a>
