--- a/project/templates/manage_timeentries.html
+++ b/project/templates/manage_timeentries.html
@@ -2,8 +2,11 @@
 {% block time_entries %}
 <div class="btn btn-group btn-group-lg">
 {% if request.user.is_staff %}
-<a class="btn btn-primary" href="{% url 'timeentry-manage' %}?extra={{ extra }}&minus=1">-</a>
-<a class="btn btn-primary" href="{% url 'timeentry-manage' %}?extra={{ extra }}&plus=1">+</a>
+<div class="btn-group btn-group-lg py-3">
+<a class="btn btn-outline-dark" href="{% url 'timeentry-manage' %}?extra={{ extra }}&minus=1">-</a>
+<a class="btn btn-outline-dark" href="{% url 'timeentry-manage' %}?extra={{ extra }}&plus=1">+</a>
+</div>
+
 {% endif %}
 </div>
 <form method="post">{% csrf_token %}
