--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -29,6 +29,8 @@
       <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Navbar</a>
+          {% block navbar %}
+          {% endblock %}
         </div>
       </nav>
 
