--- a/project/templates/manage_timesheet.html
+++ b/project/templates/manage_timesheet.html
@@ -7,7 +7,7 @@
 <a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?extra={{ extra }}&plus=1">+</a>
 </div>
 <ul>
-  {{ formset.as_ul }}
+  {{ timeentry_formset.as_ul }}
 </ul>
 <h1>Notes</h1>
 <input class="btn btn-lg btn-primary" type="submit" value="Submit">
