--- a/project/templates/manage_timesheet.html
+++ b/project/templates/manage_timesheet.html
@@ -3,8 +3,8 @@
 <form method="post">{% csrf_token %}
 <h1>Time Entries</h1>
 <div class="btn-group btn-group-lg py-3">
-<a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?extra={{ extra }}&minus=1">-</a>
-<a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?extra={{ extra }}&plus=1">+</a>
+<a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?timeentry-extra={{ timeentry_extra }}&timeentry-minus=1">-</a>
+<a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?timeentry-extra={{ timeentry_extra }}&timeentry-plus=1">+</a>
 </div>
 <ul>
   {{ timeentry_formset.as_ul }}
