--- a/project/templates/manage_timesheet.html
+++ b/project/templates/manage_timesheet.html
@@ -10,6 +10,13 @@
   {{ timeentry_formset.as_ul }}
 </ul>
 <h1>Notes</h1>
+<div class="btn-group btn-group-lg py-3">
+<a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?note-extra={{ note_extra }}&note-minus=1">-</a>
+<a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?note-extra={{ note_extra }}&note-plus=1">+</a>
+</div>
+<ul>
+  {{ note_formset.as_ul }}
+</ul>
 <input class="btn btn-lg btn-primary" type="submit" value="Submit">
 </form>
 {% endblock %}
