--- a/project/templates/manage_timesheet.html
+++ b/project/templates/manage_timesheet.html
@@ -17,6 +17,6 @@
 <ul>
   {{ note_formset.as_ul }}
 </ul>
-<input class="btn btn-lg btn-primary" type="submit" value="Submit">
+<input class="btn btn-lg btn-outline-dark" type="submit" value="Save">
 </form>
 {% endblock %}
