--- a/project/templates/manage_timesheet.html
+++ b/project/templates/manage_timesheet.html
@@ -1,4 +1,5 @@
 {% extends 'home/home_page.html' %}
+{% load crispy_forms_tags %}
 {% block timesheets %}
 <form method="post">{% csrf_token %}
 <h1>Time Entries</h1>
@@ -6,17 +7,13 @@
 <a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?timeentry-extra={{ timeentry_extra }}&timeentry-minus=1&note-extra={{ note_extra }}">-</a>
 <a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?timeentry-extra={{ timeentry_extra }}&timeentry-plus=1&note-extra={{ note_extra }}">+</a>
 </div>
-<ul>
-  {{ timeentry_formset.as_ul }}
-</ul>
+{% crispy timeentry_formset %}
 <h1>Notes</h1>
 <div class="btn-group btn-group-lg py-3">
 <a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?note-extra={{ note_extra }}&note-minus=1&timeentry-extra={{ timeentry_extra }}">-</a>
 <a class="btn btn-outline-dark" href="{% url 'timesheet-manage' timesheet.pk %}?note-extra={{ note_extra }}&note-plus=1&timeentry-extra={{ timeentry_extra}}">+</a>
 </div>
-<ul>
-  {{ note_formset.as_ul }}
-</ul>
+{% crispy note_formset %}
 <input class="btn btn-lg btn-outline-dark" type="submit" value="Save">
 </form>
 {% endblock %}
