--- a/project/templates/manage_timesheet.html
+++ b/project/templates/manage_timesheet.html
@@ -1,6 +1,7 @@
 {% extends 'home/home_page.html' %}
 {% load crispy_forms_tags %}
 {% block timesheets %}
+    <script src="{% url 'jsi18n' %}"></script>
     <form method="post">{% csrf_token %}
         <h1>Time Entries</h1>
         <div class="btn-group btn-group-lg py-3">
